promotion reversal implemented #047