@@ -5,6 +5,8 @@ import java.util.Set;
 import oogasalad.GamePlayer.Board.ChessBoard;
 import oogasalad.GamePlayer.Board.Tiles.ChessTile;
 import oogasalad.GamePlayer.EngineExceptions.EngineException;
+import oogasalad.GamePlayer.GamePiece.Piece;
+import oogasalad.GamePlayer.Movement.Movement;
 
 /**
  * Promotion but it just adds the reverse of possible moves
@@ -18,6 +20,12 @@ public class PromotionReverse implements TileAction{
    */
   @Override
   public Set<ChessTile> executeAction(ChessTile tile, ChessBoard board) throws EngineException {
-    return Collections.emptySet();
+    if(tile.getPiece().isEmpty()) return Collections.emptySet();
+
+    Piece promotedPiece = tile.getPiece().get();
+    promotedPiece.setNewMovements(Movement.invertMovements(promotedPiece.getMoves()),
+        Movement.invertMovements(promotedPiece.getCaptures()));
+
+    return Set.of(tile);
   }
 }
